tests/request/inheritance.out
string(3) "PUT"
string(3) "foo"
string(3) "bar"
string(16) "RuntimeException"
string(37) "SubSapiRequest::$method is read-only."

Fatal error: Uncaught RuntimeException: MagicSapiRequest::$magicTest is read-only. in /Users/pmjones/Code/pmjones/php-request/src/SapiRequest.php:125
Stack trace:
#0 /Users/pmjones/Code/pmjones/php-request/tests/request/inheritance.php(39): SapiRequest->__set('magicTest', 'baz')
#1 {main}
  thrown in /Users/pmjones/Code/pmjones/php-request/src/SapiRequest.php on line 125